--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="" href="" />
     <link rel="stylesheet" href="src/style/styles.css" />
+    <link rel="stylesheet" href="src/style/home-styles.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Countries</title>
   </head>
