Deleted unnecessary lines and added some styling

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="" href="" />
-    <link rel="stylesheet" href="src/style/styles.css" />
-    <link rel="stylesheet" href="src/style/home-styles.css" />
+    <!-- <link rel="stylesheet" href="src/style/countrydetails-styles.css" />
+    <link rel="stylesheet" href="src/style/styles.css" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Countries</title>
   </head>
