currency senction now displays currencies.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <!-- <link rel="stylesheet" href="src/style/countrydetails-styles.css" />
     <link rel="stylesheet" href="src/style/styles.css" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Countries</title>
+    <title>Travol</title>
   </head>
   <body>
     <div id="root"></div>
