--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="" href="" />
+    <link rel="icon" type="favicon" href="src/assets/favicon.svg" />
     <!-- <link rel="stylesheet" href="src/style/countrydetails-styles.css" />
     <link rel="stylesheet" href="src/style/styles.css" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
